Fix Section block background overlay z-index

--- a/private/src/styles/blocks/section/_editor.scss
+++ b/private/src/styles/blocks/section/_editor.scss
@@ -2,3 +2,7 @@
   padding-right: 0;
   padding-left: 0;
 }
+
+.section--has-bg-overlay::before {
+  z-index: 0 !important;
+}
