--- a/private/src/styles/blocks/section/_main.scss
+++ b/private/src/styles/blocks/section/_main.scss
@@ -95,26 +95,6 @@
   max-width: none !important;
 }
 
-.section--has-bg-gradient {
-  position: relative;
-}
-
-.section--has-bg-gradient::before {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 1;
-  content: "";
-  display: block;
-  background: rgba(0, 0, 0, .5);
-}
-
-.section--has-bg-gradient > * {
-  z-index: 2;
-}
-
 .section--textWhite a {
   color: $color-white;
 }
